app/static/styles/style.css
/* ... */
      @media (max-width: 767px) {
        .footer-area .footer-support span {
          display: block; } }
  .footer-area .footer-app-store {
    padding-top: 27px; }
    .footer-area .footer-app-store ul li {
      display: inline-block;
      margin-right: 8px; }
      @media only screen and (min-width: 992px) and (max-width: 1199px) {
        .footer-area .footer-app-store ul li {
          margin-right: 6px; } }
      .footer-area .footer-app-store ul li:last-child {
        margin-right: 0; }
      @media (max-width: 767px) {
        .footer-area .footer-app-store ul li {
          width: 120px; } }
      @media only screen and (min-width: 576px) and (max-width: 767px) {
        .footer-area .footer-app-store ul li {
          width: auto; } }
  .footer-area .copyright .text {
    color: #121212; }
  .footer-area.footer-dark {
    background-color: #121212; }
    .footer-area.footer-dark .social li a {
      color: #fff; }
    .footer-area.footer-dark .footer-support {
      padding-top: 21px; }
      .footer-area.footer-dark .footer-support span {
        color: #fff; }
    .footer-area.footer-dark .footer-app-store {
      padding-top: 27px; }
      .footer-area.footer-dark .footer-app-store ul li {
        color: #fff; }
    .footer-area.footer-dark .copyright .text {
      color: #fff; }

/*===== BACK TO TOP =====*/
.back-to-top {
  font-size: 20px;
  color: #fff;
  position: fixed;
  right: 20px;
  bottom: 20px;
  width: 45px;
  height: 45px;
  line-height: 45px;
  border-radius: 5px;
  background-color: #0067f4;
  text-align: center;
  z-index: 99;
  -webkit-transition: all 0.3s ease-out 0s;
  -moz-transition: all 0.3s ease-out 0s;
  -ms-transition: all 0.3s ease-out 0s;
  -o-transition: all 0.3s ease-out 0s;
  transition: all 0.3s ease-out 0s;
  display: none; }
  .back-to-top:hover {
    color: #fff;
    background-color: #0067f4; }

/*# sourceMappingURL=style.css.map */

@media all and (min-width: 992px) {
	.navbar .nav-item .dropdown-menu{ display: none; }
	.navbar .nav-item:hover .nav-link{   }
	.navbar .nav-item:hover .dropdown-menu{ display: block; }
	.navbar .nav-item .dropdown-menu{ margin-top:0; }
}

.cash {
    color:#0ac775;
    font-weight: bold;
}

.sales {
    color:#0ac775;
    font-weight: bold;
}

.debt {
    color:#f24965;;
    font-weight: bold;
}

.completed {
    text-decoration: line-through;
}

.date-complete {
    color:#0ac775;
    font-style: italic;
}

.invisible-element {
    display: none;
}

.center {
    display: block;
    margin-left: auto;
    margin-right: auto;
    width: 50%;
}

.card {
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
    max-width: 300px;
    margin: auto;
    text-align: center;
    font-family: arial;
}
  
.price {
    color: grey;
    font-size: 22px;
}
  
.card button {
    border: none;
    outline: 0;
    padding: 12px;
    color: white;
    background-color: #000;
    text-align: center;
    cursor: pointer;
    width: 100%;
    font-size: 18px;
}
  
.card button:hover {
    opacity: 0.7;
}

.product {
    margin-bottom: 25px;
}

.product img {
    float: left;
    width:  100px;
    height: 100px;
    object-fit: cover;
}

